2008-03-08  Philip Withnall  <pwithnall@svn.gnome.org>

	* LINGUAS: Added en_GB (British English) translation.
	* en_GB.po: Added British English translation.

2008-03-07  Daniel Nylander <po@danielnylander.se>

	* po/sv.po: Updated Swedish translation.

2008-02-19  Ilkka Tuohela <hile@iki.fi>

	* po/fi.po: Added Finnish translation.
	* po/LINGUAS: Added 'fi'. 

2008-01-29  Mathias Hasselmann  <mathias@openismus.com>

	=== Release 0.3.4 ===

	* NEWS: Updated for release 0.3.4

2008-01-29  Mathias Hasselmann  <mathias@openismus.com>

	Small tweaks to make distcheck happy.

	* Makefile.am: Update EXTRA_DIST and add DISTCLEANFILES.
	* po/ChangeLog: Update toplevel ChangeLog please.

2008-01-21  Mathias Hasselmann  <mathias@openismus.com>

	Avoid failed SOUP_IS_SERVER (server) assertions.

	* libepc/publisher.c: Call soup_server_remove_handler() only,
	when self->priv->server is set in epc_publisher_remove_handlers().

2008-01-21  Mathias Hasselmann  <mathias@openismus.com>

	Cleanup authentication handlers in epc_publisher_quit (#510435).

	* libepc/publisher.c: Call epc_publisher_remove_handlers() in
	epc_publisher_quit() to get rid of authentication handlers.

2008-01-21  Mathias Hasselmann  <mathias@openismus.com>

	* po/LINGUAS: Added ca

2008-01-21  Mathias Hasselmann  <mathias@openismus.com>

	Migrate from GNU gettext to intltool (#510465, Luca Ferretti).

	* autogen.sh: Invoke gnome-autogen.sh, instead of shipping a copy.
	* configure.ac, Makefile.am: Migrate from GNU gettext to intltool.
	* .gitignore, po/.gitignore: Update for intltool.
	* po/POTFILES.skip: Hide examples from intltool.
	* ABOUT-NLS, config.rpath, gtk-doc.make, m4/*, po/Makefile.in.in,
	po/Rules-quot, po/libepc.pot, po/*.header, po/*.sed, po/*.sin:
	Remove generated files from repository.

2008-01-21  Jorge González  <jorgegonz@svn.gnome.org>

	* po/es.po: Added Spanish translation.
	* po/LINGUAS: Added es

2008-01-19  Gil Forcada  <gforcada@gnome.org>

	* po/ca.po: Added Catalan translation.
