@@ -1,3 +1,9 @@
+2008-03-22  Mathias Hasselmann  <mathias@openismus.com>
+
+	Make libsoup-2.4 variant build with -Werror again.
+
+	* libepc/publisher.c: Mark some arguments as unused.
+
 2008-03-08  Philip Withnall  <pwithnall@svn.gnome.org>
 
 	* LINGUAS: Added en_GB (British English) translation.
